# ChangeLog for dev-dotnet/ant-dotnet
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ant-dotnet/Attic/ChangeLog,v 1.2 2007/07/01 12:40:44 jurek Exp $

  01 Jul 2007; Jurek Bartuszek <jurek@gentoo.org> metadata.xml,
  ant-dotnet-1.0.ebuild:
  - Added java herd to metadata.xml
  - Moved dev-java/ant-core to runtime dependencies
  - Removed redundant parameters from java-specific function calls
  - Added some "|| die"s

*ant-dotnet-1.0 (30 Jun 2007)

  30 Jun 2007; Jurek Bartuszek <jurek@gentoo.org> +metadata.xml,
  +ant-dotnet-1.0.ebuild:
  Initial version (fixing bug #165642). Credit goes to bware <bWare@iWare.co.uk>
  for providing the ebuild with some minor changes by yours truly.
