@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST apache-ant-dotnet-1.0-src.tar.bz2 85651 RMD160 27966f9f8b78ded80b2536ec6ae0b877921d0f9f SHA1 025234e33cec7548d689daed6b1e753e5ad7aef7 SHA256 55a8cd8330790c941efcdf1bb136c5b5b75c2c6fb20344c43b2eb786eaffbe8a
-EBUILD ant-dotnet-1.0.ebuild 1034 RMD160 2156fe8185d7aa21b56834b8e7eeb13e29dd275c SHA1 15d81b7350327da50da590fc4d5b61edccd4d6a7 SHA256 9e7ec6a88bde5e107173497fc0c7c4cc739345d15ef1eb34313258e7dda59f28
-MISC ChangeLog 755 RMD160 0e94e738e59fbc67ba2aa314bc638e2037065c0d SHA1 0fdacbf6c0b379c5dea5be7e69fb948cf3923613 SHA256 78977a11e5170ba22756e93f7357cc32116b34da04468e0df9db49b6741d9353
+EBUILD ant-dotnet-1.0.ebuild 1106 RMD160 39728a91afdff17c951c5091f540aedc5cb1eb1a SHA1 e4ad44399e0a21682897788ec1e971237309c929 SHA256 a1d0e6795e0a47d9ecaf5a408484a6112cbe3cd9bc43d06396071ad8c8c4ce4f
+MISC ChangeLog 912 RMD160 d92915e46e9f64d94a67529edfbf42aaaa429325 SHA1 7ef86f3561a47fd87381cabc8d20733f77dbaaf4 SHA256 2008fab10c14ec3a2b35bbd6f031d6bf4e30516433a0f31556d79aaba68d130e
 MISC metadata.xml 269 RMD160 9314352f4a3a70e811257fe518adf1eaa9899db8 SHA1 5f9f2eef45952b90cb6a0015343b6e22214caed6 SHA256 2408bcdb73ddd22e09cb5cee41b61cbe3cf6989ebad64a2469f3a854a47d0803
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhqiUkACgkQcxLzpIGCsLS+igCePnoyIo/35yuvBNIDo0GEAQlJ
+wcEAn1R/s8lW5b9OpoKr+Qwku9/6j5EY
+=un8o
+-----END PGP SIGNATURE-----
