@@ -1,6 +1,9 @@
 # ChangeLog for dev-dotnet/ant-dotnet
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ant-dotnet/Attic/ChangeLog,v 1.2 2007/07/01 12:40:44 jurek Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ant-dotnet/Attic/ChangeLog,v 1.3 2008/07/01 19:45:06 betelgeuse Exp $
+
+  01 Jul 2008; Petteri Räty <betelgeuse@gentoo.org> ant-dotnet-1.0.ebuild:
+  Fix building by making sure ant-core is in classpath. Fixes bug #228847.
 
   01 Jul 2007; Jurek Bartuszek <jurek@gentoo.org> metadata.xml,
   ant-dotnet-1.0.ebuild:
